tests/regression/errors/basic/import_error_6.csd
// Import error test 6
yeet "nonexistent_module_6"
sus result drip = some_function(6)
